@@ -1,3 +1,8 @@
+2015-01-31  Doug Evans  <xdje42@gmail.com>
+
+	* gdbtypes.c (copy_type_recursive): Handle all TYPE_SPECIFIC_FIELD
+	kinds.
+
 2015-01-31  Gary Benson <gbenson@redhat.com>
 	    Doug Evans  <dje@google.com>
 
